--- a/app/views/orders/payment_data.html.erb
+++ b/app/views/orders/payment_data.html.erb
@@ -53,6 +53,7 @@
     cursor: pointer;
   }
 </style>
+<%= javascript_include_tag "https://checkout.razorpay.com/v1/checkout.js", "data-turbolinks-track" => true %>
 <script>
 $(document).ready(function(){
   var options = {
