--- a/app/views/orders/payment_data.html.erb
+++ b/app/views/orders/payment_data.html.erb
@@ -17,7 +17,7 @@
         <!-- <form action="/purchase" method="POST"> -->
         <%= form_tag("/purchase", method: "post") do %>
           <script
-              src="http://checkout.razorpay.com/v1/checkout.js"
+              src="/assets/checkout.js"
               data-key="<%= "#{Figaro.env.MERCHANT_KEY_ID}" %>"
               data-amount="<%= (@load.expected_price.to_i * 100) * 0.20 %>"
               data-name="<%= "#{@load.user.full_name}" %>"
