--- a/app/views/loads/new.html.erb
+++ b/app/views/loads/new.html.erb
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <div class="user-form">
 <div class="container container-padding-top">
   <h2>Post a Load</h2>
