--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -48,7 +48,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">Welcome to Website</h2>
+					<h2 class="title">Welcome to 3SC</h2>
 				</div>
 				<!-- /Section header -->
 
