--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -4,13 +4,13 @@
     margin-right: 200px;
     margin-left: 110px;
    padding:20px;
-  background: #41f4a0;
+  background: #FFFFFF;
    border-style: inset;
    box-shadow: 10px 10px 5px grey;}
 
 .user-form1{ 
   border-style: outset;
-  background: #41f4a0;
+  background: #FFFFFF;
   box-shadow: 300px 300px 250px blue;}
 .user-form2{ border: 1px solid black;
     margin-top: 150px;
@@ -18,7 +18,7 @@
     margin-right: 50px;
     margin-left: 50px;
    padding:20px;
-  background: #41f4a0;
+  background: #FFFFFF;
    border-style: inset;
    box-shadow: 10px 10px 5px grey;}
 
