change in style

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -116,8 +116,9 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
 						<i class="fa fa-diamond"></i>
-						<h3>App Development</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
+						<h3>Software Development</h3>
+						<p>The systems development life cycle (SDLC), also referred to as the application development life-cycle, is a term used in systems engineering, information systems and software engineering to describe a process for planning, creating, testing, and deploying an information system.</p>
+						<a href="#">Read more</a>
 					</div>
 				</div>
 				<!-- /service -->
@@ -126,50 +127,31 @@
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
 						<i class="fa fa-rocket"></i>
-						<h3>Graphic Design</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
+						<h3>Supply Chain Advisory</h3>
+						<p>Providing the right solution to overcome the challenges being faced. The main-focus remains creation of value across the supply chain.</p>
+						<a href="#">Read more</a>
 					</div>
 				</div>
 				<!-- /service -->
 
 				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fa fa-cogs"></i>
-						<h3>Creative Idea</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
-					</div>
-				</div>
+			
 				<!-- /service -->
-
-				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fa fa-diamond"></i>
-						<h3>Marketing</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
-					</div>
-				</div>
 				<!-- /service -->
 
 				<!-- service -->
 				<div class="col-md-4 col-sm-6">
 					<div class="service">
 						<i class="fa fa-pencil"></i>
-						<h3>Awesome Support</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
+						<h3>Analytics</h3>
+						<p>3SC’s supply chain practice gives scalable, sustainable and system driven value through advisory services that optimize, digitalize and improve the supply chain end to end. Big data is certainly enabling better decisions and actions, and facilitating a move away from gut feel decision making.</p>
+						<a href="#">Read more</a>
 					</div>
 				</div>
 				<!-- /service -->
 
 				<!-- service -->
-				<div class="col-md-4 col-sm-6">
-					<div class="service">
-						<i class="fa fa-flask"></i>
-						<h3>Brand Design</h3>
-						<p>Maecenas tempus tellus eget condimentum rhoncus sem quam semper libero.</p>
-					</div>
-				</div>
+				
 				<!-- /service -->
 
 			</div>
@@ -196,22 +178,30 @@
 					<div class="section-header">
 						<h2 class="title">Why Choose Us</h2>
 					</div>
-					<p>Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris. Ultrices sagittis orci a scelerisque purus.</p>
+					<p>We believe in creating value – For Employees, Customers & Partners We provide opportunities to achieve and grow and work together to achieve results. </p>
 					<div class="feature">
 						<i class="fa fa-check"></i>
-						<p>Quis varius quam quisque id diam vel quam elementum.</p>
+						<p>Control Tower</p>
 					</div>
 					<div class="feature">
 						<i class="fa fa-check"></i>
-						<p>Mauris augue neque gravida in fermentum.</p>
+						<p>Freight Bill Audit</p>
 					</div>
 					<div class="feature">
 						<i class="fa fa-check"></i>
-						<p>Orci phasellus egestas tellus rutrum.</p>
+						<p>Cross Docking</p>
 					</div>
 					<div class="feature">
 						<i class="fa fa-check"></i>
-						<p>Nec feugiat nisl pretium fusce id velit ut tortor pretium.</p>
+						<p>Demand Profiling </p>
+					</div>
+					<div class="feature">
+						<i class="fa fa-check"></i>
+						<p>End to End Supply Chain Management Analytics</p>
+					</div>
+					<div class="feature">
+						<i class="fa fa-check"></i>
+						<p>An Introduction to Demand Forecasting</p>
 					</div>
 				</div>
 				<!-- /why choose us content -->
@@ -220,9 +210,10 @@
 				<div class="col-md-6">
 					<div id="about-slider" class="owl-carousel owl-theme">
 						<img class="img-responsive" src="/assets/about1.jpg" alt="">
-						<img class="img-responsive" src="/assets/about2.jpg" alt="">
-						<img class="img-responsive" src="/assets/about1.jpg" alt="">
-						<img class="img-responsive" src="/assets/about2.jpg" alt="">
+						<img class="img-responsive" src="/assets/about3.jpg" alt="">
+						<img class="img-responsive" src="/assets/about4.jpg" alt="">
+						<img class="img-responsive" src="/assets/about5.jpg" alt="">
+						<img class="img-responsive" src="/assets/about6.jpg" alt="">
 					</div>
 				</div>
 				<!-- /About slider -->
@@ -245,167 +236,6 @@
 			<div class="overlay"></div>
 		</div>
 		<!-- /Background Image -->
-
-		<!-- Container -->
-		<div class="container">
-
-			<!-- Row -->
-			<div class="row">
-
-				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="number">
-						<i class="fa fa-users"></i>
-						<h3 class="white-text"><span class="counter">451</span></h3>
-						<span class="white-text">Happy clients</span>
-					</div>
-				</div>
-				<!-- /number -->
-
-				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="number">
-						<i class="fa fa-trophy"></i>
-						<h3 class="white-text"><span class="counter">12</span></h3>
-						<span class="white-text">Awards won</span>
-					</div>
-				</div>
-				<!-- /number -->
-
-				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="number">
-						<i class="fa fa-coffee"></i>
-						<h3 class="white-text"><span class="counter">154</span>K</h3>
-						<span class="white-text">Cups of Coffee</span>
-					</div>
-				</div>
-				<!-- /number -->
-
-				<!-- number -->
-				<div class="col-sm-3 col-xs-6">
-					<div class="number">
-						<i class="fa fa-file"></i>
-						<h3 class="white-text"><span class="counter">45</span></h3>
-						<span class="white-text">Projects completed</span>
-					</div>
-				</div>
-				<!-- /number -->
-
-			</div>
-			<!-- /Row -->
-
-		</div>
-		<!-- /Container -->
-
-	</div>
-	<!-- /Numbers -->
-
-	<!-- Pricing -->
-	<div id="pricing" class="section md-padding">
-
-		<!-- Container -->
-		<div class="container">
-
-			<!-- Row -->
-			<div class="row">
-
-				<!-- Section header -->
-				<div class="section-header text-center">
-					<h2 class="title">Pricing Table</h2>
-				</div>
-				<!-- /Section header -->
-
-				<!-- pricing -->
-				<div class="col-sm-4">
-					<div class="pricing">
-						<div class="price-head">
-							<span class="price-title">Basic plan</span>
-							<div class="price">
-								<h3>$9<span class="duration">/ month</span></h3>
-							</div>
-						</div>
-						<ul class="price-content">
-							<li>
-								<p>1GB Disk Space</p>
-							</li>
-							<li>
-								<p>100 Email Account</p>
-							</li>
-							<li>
-								<p>24/24 Support</p>
-							</li>
-						</ul>
-						<div class="price-btn">
-							<button class="outline-btn">Purchase now</button>
-						</div>
-					</div>
-				</div>
-				<!-- /pricing -->
-
-				<!-- pricing -->
-				<div class="col-sm-4">
-					<div class="pricing">
-						<div class="price-head">
-							<span class="price-title">Silver plan</span>
-							<div class="price">
-								<h3>$19<span class="duration">/ month</span></h3>
-							</div>
-						</div>
-						<ul class="price-content">
-							<li>
-								<p>1GB Disk Space</p>
-							</li>
-							<li>
-								<p>100 Email Account</p>
-							</li>
-							<li>
-								<p>24/24 Support</p>
-							</li>
-						</ul>
-						<div class="price-btn">
-							<button class="outline-btn">Purchase now</button>
-						</div>
-					</div>
-				</div>
-				<!-- /pricing -->
-
-				<!-- pricing -->
-				<div class="col-sm-4">
-					<div class="pricing">
-						<div class="price-head">
-							<span class="price-title">Gold plan</span>
-							<div class="price">
-								<h3>$39<span class="duration">/ month</span></h3>
-							</div>
-						</div>
-						<ul class="price-content">
-							<li>
-								<p>1GB Disk Space</p>
-							</li>
-							<li>
-								<p>100 Email Account</p>
-							</li>
-							<li>
-								<p>24/24 Support</p>
-							</li>
-						</ul>
-						<div class="price-btn">
-							<button class="outline-btn">Purchase now</button>
-						</div>
-					</div>
-				</div>
-				<!-- /pricing -->
-
-			</div>
-			<!-- Row -->
-
-		</div>
-		<!-- /Container -->
-
-	</div>
-	<!-- /Pricing -->
-
 
 	<!-- Testimonial -->
 	<div id="testimonial" class="section md-padding">
@@ -430,10 +260,10 @@
 						<div class="testimonial">
 							<div class="testimonial-meta">
 								<img src="/assets/perso1.jpg" alt="">
-								<h3 class="white-text">John Doe</h3>
-								<span>Web Designer</span>
+								<h3 class="white-text">Sandeep Chourey</h3>
+								<span>Senior ROR Developer</span>
 							</div>
-							<p class="white-text">Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris.</p>
+							<p class="white-text">I am Sandeep Chourey, willing to work in challenging environment where i can prove myself, very different from everyone else.</p>
 						</div>
 						<!-- /testimonial -->
 
@@ -441,10 +271,10 @@
 						<div class="testimonial">
 							<div class="testimonial-meta">
 								<img src="/assets/perso2.jpg" alt="">
-								<h3 class="white-text">John Doe</h3>
-								<span>Web Designer</span>
+								<h3 class="white-text">Rahul Kumar</h3>
+								<span>ROR Developer</span>
 							</div>
-							<p class="white-text">Molestie at elementum eu facilisis sed odio. Scelerisque in dictum non consectetur a erat. Aliquam id diam maecenas ultricies mi eget mauris.</p>
+							<p class="white-text">I am Rahul Kumar, willing to face challenges and also deliver output as per requirement.</p>
 						</div>
 						<!-- /testimonial -->
 
@@ -490,8 +320,8 @@
 							</div>
 						</div>
 						<div class="team-content">
-							<h3>John Doe</h3>
-							<span>Web Designer</span>
+							<h3>Sandeep Chourey</h3>
+							<span>Senior ROR Developer</span>
 						</div>
 					</div>
 				</div>
@@ -511,8 +341,8 @@
 							</div>
 						</div>
 						<div class="team-content">
-							<h3>John Doe</h3>
-							<span>Web Designer</span>
+							<h3>Rahul Kumar</h3>
+							<span>ROR Developer</span>
 						</div>
 					</div>
 				</div>
@@ -532,8 +362,8 @@
 							</div>
 						</div>
 						<div class="team-content">
-							<h3>John Doe</h3>
-							<span>Web Designer</span>
+							<h3>Madhu Mandanna</h3>
+							<span>Senior Manager-IT</span>
 						</div>
 					</div>
 				</div>
@@ -547,92 +377,6 @@
 
 	</div>
 	<!-- /Team -->
-
-	<!-- Blog -->
-	<div id="blog" class="section md-padding bg-grey">
-
-		<!-- Container -->
-		<div class="container">
-
-			<!-- Row -->
-			<div class="row">
-
-				<!-- Section header -->
-				<div class="section-header text-center">
-					<h2 class="title">Recents news</h2>
-				</div>
-				<!-- /Section header -->
-
-				<!-- blog -->
-				<div class="col-md-4">
-					<div class="blog">
-						<div class="blog-img">
-							<img class="img-responsive" src="/assets/blog1.jpg" alt="">
-						</div>
-						<div class="blog-content">
-							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i>John doe</li>
-								<li><i class="fa fa-clock-o"></i>18 Oct</li>
-								<li><i class="fa fa-comments"></i>57</li>
-							</ul>
-							<h3>Molestie at elementum eu facilisis sed odio</h3>
-							<p>Nec feugiat nisl pretium fusce id velit ut tortor pretium. Nisl purus in mollis nunc sed. Nunc non blandit massa enim nec.</p>
-							<a href="blog-single.html">Read more</a>
-						</div>
-					</div>
-				</div>
-				<!-- /blog -->
-
-				<!-- blog -->
-				<div class="col-md-4">
-					<div class="blog">
-						<div class="blog-img">
-							<img class="img-responsive" src="/assets/blog2.jpg" alt="">
-						</div>
-						<div class="blog-content">
-							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i>John doe</li>
-								<li><i class="fa fa-clock-o"></i>18 Oct</li>
-								<li><i class="fa fa-comments"></i>57</li>
-							</ul>
-							<h3>Molestie at elementum eu facilisis sed odio</h3>
-							<p>Nec feugiat nisl pretium fusce id velit ut tortor pretium. Nisl purus in mollis nunc sed. Nunc non blandit massa enim nec.</p>
-							<a href="blog-single.html">Read more</a>
-						</div>
-					</div>
-				</div>
-				<!-- /blog -->
-
-				<!-- blog -->
-				<div class="col-md-4">
-					<div class="blog">
-						<div class="blog-img">
-							<img class="img-responsive"  src="/assets/blog3.jpg" alt="">
-						</div>
-						<div class="blog-content">
-							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i>John doe</li>
-								<li><i class="fa fa-clock-o"></i>18 Oct</li>
-								<li><i class="fa fa-comments"></i>57</li>
-							</ul>
-							<h3>Molestie at elementum eu facilisis sed odio</h3>
-							<p>Nec feugiat nisl pretium fusce id velit ut tortor pretium. Nisl purus in mollis nunc sed. Nunc non blandit massa enim nec.</p>
-							<a href="blog-single.html">Read more</a>
-						</div>
-					</div>
-				</div>
-				<!-- /blog -->
-
-			</div>
-			<!-- /Row -->
-
-		</div>
-		<!-- /Container -->
-
-	</div>
-	<!-- /Blog -->
-
-
 	<!-- Footer -->
 	<footer id="footer" class="sm-padding bg-dark">
 
@@ -663,7 +407,7 @@
 
 					<!-- footer copyright -->
 					<div class="footer-copyright">
-						<p>Copyright © 2017. All Rights Reserved. Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+						<p>Copyright © 2017. All Rights Reserved. Designed by <a href="http://3scsolution.com" target="_blank">#SC</a></p>
 					</div>
 					<!-- /footer copyright -->
 
