--- a/app/views/trucks/new.html.erb
+++ b/app/views/trucks/new.html.erb
@@ -1,4 +1,4 @@
-<div class="user-form1">
+<div class="post">
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -6,7 +6,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 <script src="/assets/custom.js"></script>
 <div class="container">
-  <h2>Post a Truck</h2>
+  <h2>Post a <span class="color_orange">Truck</span></h2>
   <p>Plese fill the following form to load  truck details</p>
   <fieldset><legend>Basic Details</legend></fieldset>
     <%= form_for @truck, url: {action: "create"}, html: {class: "form-inline"} do |f| %>
@@ -20,7 +20,37 @@
       <% end %>
     </div>
       <table cellpadding="1" cellspacing="1" class="tblstyle">
-        <tr >
+        <tr>
+      <td>
+        <div class="form-group">
+          <label for="from">From<span>*</span></label>
+            <%= f.select 'truck_from', options_for_select(country_list.collect{ |u| [u] }), :class=> "input control-label col-sm-4", :prompt=>"Truck from" %>
+        </div>        </td>
+
+        <td>
+          <div class="form-group">
+        <label for="to">To <span>*</span></label>
+          <%= f.select 'truck_to', options_for_select(country_list.collect{ |u| [u] }), :prompt=>"Truck to" %>
+      </div>
+        </td>
+          <td>
+        <div class="form-group">
+         <label for="from">Scheduled Date </span></label>
+          <span> <%= f.text_field :schedule_date, :id=> "datepicker" %></span>
+        </div>
+        </td>
+      </tr>
+      <tr>
+        <td>   </td>
+      </tr>
+        <!-- <td>
+          <div class="form-group">
+        <label for="from">Max truck capacity(Metric Ton)<span>*</span></label> -->
+        <%#= f.text_field :truck_weight, :id=> "max-truck-capacity", :readonly => true %> 
+         <!-- <input id="max-truck-capacity" name="truck-capacity" type="text" readonly></input>
+      </div>
+        </td> -->
+      <tr>
         <td>
           <div class="form-group ">
         <label for="from">Vehicle Number<span>*</span></label>
@@ -43,63 +73,34 @@
         </td>
       </tr>
       <tr>
-        <td>   </td>
-      </tr>
-      <tr>
+         
         <td>
           <div class="form-group">
-        <label for="from">Truck Type<span>*</span></label>
-          <%= f.select :truck_type, options_for_select(Truck::TRUCK_CAPICITY.map {|k,v| [k]}),:prompt=>"Truck type" %>
-      </div>
-        </td>
-        <!-- <td>
-          <div class="form-group">
-        <label for="from">Max truck capacity(Metric Ton)<span>*</span></label> -->
-        <%#= f.text_field :truck_weight, :id=> "max-truck-capacity", :readonly => true %> 
-         <!-- <input id="max-truck-capacity" name="truck-capacity" type="text" readonly></input>
-      </div>
-        </td> -->
-        <td>
-          <div class="form-group">
-            <label for="from">Available truck capacity(Metric Ton)<span>*</span></label>
+            <label for="from">Metric Ton<span>*</span></label>
             <%= f.select :truck_weight, options_for_select(Truck::TRUCK_CAPICITY.map {|k,v| [v,v]}),:prompt=>"Select Weight" %>
           </div>
         </td> 
-      </tr>
-      <tr>
-        <td >  </td>
-      </tr>
-      <tr>
-        <td>
-        <div class="form-group">
-         <label for="from">Scheduled Date </span></label>
-          <span> <%= f.text_field :schedule_date, :id=> "datepicker" %></span>
-        </div>
-        </td>
-      <td>
-        <div class="form-group">
-          <label for="from">From<span>*</span></label>
-            <%= f.select 'truck_from', options_for_select(country_list.collect{ |u| [u] }), :class=> "input control-label col-sm-4", :prompt=>"Truck from" %>
-        </div>
-        </td>
-        <td>
-          <div class="form-group">
-        <label for="to">To <span>*</span></label>
-          <%= f.select 'truck_to', options_for_select(country_list.collect{ |u| [u] }), :prompt=>"Truck to" %>
-      </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
+         <td>
           <div class="form-group">
             <label for="to">Transit time <span>*</span></label>
             <%= f.select 'transit_time', options_for_select(Truck::TRANSIT_TIME.collect{ |k,v| [k] }), :prompt=>"Transit time" %>
           <!-- <input type="text" class="timepicker" name="time"/> -->
           </div>
         </td>
+         <td>
+          <div class="form-group">
+        <label for="from">Truck Type<span>*</span></label>
+          <%= f.select :truck_type, options_for_select(Truck::TRUCK_CAPICITY.map {|k,v| [k]}),:prompt=>"Truck type" %>
+      </div>
+        </td>
+      </tr>
+      <tr>
+        <td >  </td>
+      </tr>
+      <tr>
       <td>
       <div class="form-group form-margin-6">
-        <label for="from">Document<span class="note-docs">(will you provide LR,POD)</span></label>
+        <label for="from">Document<span></span></label>
           <%= f.select :documentation, options_for_select(Truck::SHARE_DOCS.map {|k,v| [k,v]}, :selected => params[:truck].present? ? params[:truck][:documentation] : ''  ) %>
       </div>
       </td>
@@ -109,6 +110,12 @@
             <%= f.select :truck_body, options_for_select(Truck::TRUCK_BODY.map {|k,v| [k,v]}),:prompt=>"Truck body" %>
           </div>
         </td>
+          <td>
+          <div class="form-group">
+           <label for="from">Driver licence number <span>*</span></span></label>
+            <%= f.text_field :licence_number, class: "input control-label col-sm-4", :placeholder=> "Driver licence number", :maxlength => 15 %>
+          </div>
+        </td> 
       <!-- <td>
       <div class="form-group form-margin-6">
         <label for="from">Sharing truck</label>
@@ -116,27 +123,23 @@
       </div>
       </td> -->
       </tr>
-      <tr>
+      
         <!-- <td>
           <div class="form-group">
           <label for="from">Frequency<span>*</span></label>
             <%#= f.select :frequency, options_for_select(Truck::FREQUENCY.map {|k,v| [k,v]}),:prompt=>"Frequency" %>
           </div>
         </td> -->
-        <td>
-          <div class="form-group">
-           <label for="from">Driver licence number <span>*</span></span></label>
-            <%= f.text_field :licence_number, class: "input control-label col-sm-4", :placeholder=> "Driver licence number", :maxlength => 15 %>
-          </div>
-        </td>
+
+        <tr>
         <td>
           <div class="form-group" id="pin-code-destination">
             <label for="from">Information (if any)</label>
-             <%= f.text_area :information, class: "input control-label col-sm-4", :class=> "information-text form-control", :placeholder=> "Information" %>
+             <%= f.text_area :information, class: "input control-label col-sm-6", :class=> "information-text form-control", :placeholder=> "Information" %>
           </div>
         </td>
-        
-      </tr>
+        </tr>
+  
       <tr>
         <!-- <td>
           <div class="form-group">
