--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -48,7 +48,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">Welcome to 3SC</h2>
+					<h2 class="title">Welcome to <span class="color_orange">3SC</span></h2>
 				</div>
 				<!-- /Section header -->
 
@@ -108,7 +108,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">What we offer</h2>
+					<h2 class="title">What we <span class="color_orange">offer</span></h2>
 				</div>
 				<!-- /Section header -->
 
@@ -176,7 +176,7 @@
 				<!-- why choose us content -->
 				<div class="col-md-6">
 					<div class="section-header">
-						<h2 class="title">Why Choose Us</h2>
+						<h2 class="title">Why Choose <span class="color_orange">Us</span></h2>
 					</div>
 					<p>We believe in creating value – For Employees, Customers & Partners We provide opportunities to achieve and grow and work together to achieve results. </p>
 					<div class="feature">
@@ -302,7 +302,7 @@
 
 				<!-- Section header -->
 				<div class="section-header text-center">
-					<h2 class="title">Our Team</h2>
+					<h2 class="title"><span class="color_white">Our</span> <span class="color_orange">Team</span></h2>
 				</div>
 				<!-- /Section header -->
 
@@ -407,7 +407,7 @@
 
 					<!-- footer copyright -->
 					<div class="footer-copyright">
-						<p>Copyright © 2017. All Rights Reserved. Designed by <a href="http://3scsolution.com" target="_blank">#SC</a></p>
+						<p>Copyright © 2017. All Rights Reserved. Designed by <a href="http://3scsolution.com" target="_blank">3SC</a></p>
 					</div>
 					<!-- /footer copyright -->
 
