--- a/app/views/orders/payment_data.html.erb
+++ b/app/views/orders/payment_data.html.erb
@@ -27,9 +27,10 @@
               data-theme.color="#F37254"
           >
           </script>
+          <!-- <input id="rzp-button1" type="button" value="Pay with razorpay" class="razorpay-payment-button1"> -->
+          <input type="submit" value="Pay with razorpay" class="razorpay-payment-button1">
           <input type="hidden" value="<%= "#{@load.id}" %>" name="product_id">
           <input type="hidden" value="<%= "#{current_user.id}" %>" name="user_id">
-          <input id="rzp-button1" type="button" value="Pay with razorpay" class="razorpay-payment-button1">
         <% end %>
         <br>
       </div>
@@ -39,19 +40,19 @@
   </div>
 </div>
 <style type="text/css">
+  .razorpay-payment-button{display: none !important;}
   .razorpay-payment-button1{
     background: image-url('/assets/PayWithRzp.png') center no-repeat;
     background-size: contain;
     box-shadow: none;
     border: none;
-    outline: none;
+    outline: none;  
     font-size: 0;
     height: 36px;
     width: 230px;
     padding: 0;
     cursor: pointer;
   }
-  .razorpay-payment-button{display: none !important;}
 </style>
 <script>
 $(document).ready(function(){
